src/test/valid/custom/impParamArrayElemAssignInDeclare.wacc
# a simple function definition and call

# Output:
# 0

# Program:

begin
  int f(a) is
    bool i = a[1] ;
    return 0 
  end
  println 0
end
