src/test/invalid/syntaxErr/extensionTests/forLoops/missingDo.wacc
begin
  for(int i = 0; i; i = i+1)
    println i
  done
end
